--- a/locale/fr_CA/LC_MESSAGES/fr_CA.po
+++ b/locale/fr_CA/LC_MESSAGES/fr_CA.po
@@ -2,25 +2,21 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: senku\n"
-"POT-Creation-Date: 2024-04-27 16:42+0200\n"
-"PO-Revision-Date: 2024-04-04 14:09+0200\n"
+"POT-Creation-Date: 2024-04-27 16:23+0200\n"
+"PO-Revision-Date: 2024-04-27 16:24+0200\n"
 "Last-Translator: LeKiwiDeBx <LeKiwiDeBx@translate.org>\n"
 "Language-Team: LeKiwiDeBx\n"
-"Language: fr_FR\n"
+"Language: fr_CA\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Poedit 3.4.2\n"
-"X-Poedit-Basepath: ..\n"
+"X-Poedit-Basepath: ../../..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: _;__;C_;Q_;N_;NC_;TRANSLATORS:\n"
-"X-Poedit-SearchPath-0: board.c\n"
-"X-Poedit-SearchPath-1: timer.c\n"
-"X-Poedit-SearchPath-2: score.c\n"
-"X-Poedit-SearchPath-3: peg.c\n"
-"X-Poedit-SearchPath-4: matrix.c\n"
-"X-Poedit-SearchPath-5: main.c\n"
+"X-Poedit-KeywordsList: _;__;N_;TRANSLATORS:\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-SearchPath-1: board.c\n"
 
 #: board.c:52
 msgid ""
